# sozu-prometheus-connector

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml  example.config.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  main.rs  metrics_server.rs  prometheus.rs  sozu_channel.rs
src/svc/: config.rs  logging.rs  mod.rs
src/svc/http/server/: handler.rs  layer.rs  mod.rs
src/svc/telemetry/: mod.rs  prometheus.rs
systemd/: sozu-prometheus-connector.service  sozu-pulsar-connector.service
