[package]
name = "sozu-prometheus-connector"
description = "This application retrieve internals metrics of Sōzu and format them into prometheus"
homepage = "https://github.com/CleverCloud/sozu-prometheus-connector"
documentation = "https://github.com/CleverCloud/sozu-prometheus-connector/blob/main/README.md"
version = "0.1.0"
rust-version = "1.67.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>", "Florentin Dubois <florentin.dubois@clever-cloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6.20", features = ["tokio"] }
config = "^0.13.3"
clap = { version = "^4.3.21", features = ["derive"] }
hyper = { version = "^0.14.27", default-features = false, features = ["http1", "server"] }
mime = "^0.3.17"
once_cell = "^1.18.0"
paw = "^1.0.0"
prometheus = "^0.13.3"
serde = { version = "^1.0.183", features = ["derive"] }
serde_json = "^1.0.104"
sentry = { version = "^0.31.5", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "^0.31.5"
sozu-client = "^0.2.1"
sozu-command-lib = "^0.15.3"
thiserror = "^1.0.44"
tokio = { version = "^1.29.1", features = ["macros", "rt", "signal"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.17"
