[package]
name = "sozu-prometheus-connector"
description = "This application retrieve internals metrics of Sōzu and format them into prometheus"
homepage = "https://github.com/CleverCloud/sozu-prometheus-connector"
documentation = "https://github.com/CleverCloud/sozu-prometheus-connector/blob/main/README.md"
version = "0.2.0"
rust-version = "1.74.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>", "Florentin Dubois <florentin.dubois@clever-cloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.4", features = ["tokio"] }
config = "^0.13.4"
clap = { version = "^4.4.18", features = ["derive"] }
mime = "^0.3.17"
once_cell = "^1.19.0"
paw = "^1.0.0"
prometheus = "^0.13.3"
serde = { version = "^1.0.195", features = ["derive"] }
serde_json = "^1.0.111"
sentry = { version = "^0.32.1", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "^0.32.1"
sozu-client = "^0.4.0"
sozu-command-lib = "1.0.0-rc.1"
thiserror = "^1.0.56"
tokio = { version = "^1.35.1", features = ["macros", "rt", "signal"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"
urlencoding = "2.1.3"
